# Clang_tools

./: CMakeLists.txt  num_of_functions.cpp  print_ast.cpp
function/: function_details.cpp  function_details_2.cpp
